@@ -444,6 +444,15 @@ OnEditReplaceAll ()
           m_ptFirstFound.x += m_pBuddy->m_nLastReplaceLen;
         }
 
+      // calculate the end of the current replacement
+      CPoint m_ptCurrentReplacedEnd;
+      m_ptCurrentReplacedEnd.y = m_ptFoundAt.y;
+      m_ptCurrentReplacedEnd.x = m_ptFoundAt.x + m_pBuddy->m_nLastReplaceLen;
+
+      // m_ptFoundAt.x has two meanings:
+      // (1) One is the position of the word that was found.
+      // (2) The other is next position to search.
+      // The code below calculates the latter.
       if (!m_pBuddy->m_nLastFindWhatLen)
         if (m_ptFoundAt.y + 1 < m_pBuddy->GetLineCount ())
           {
@@ -461,11 +470,6 @@ OnEditReplaceAll ()
           m_ptFoundAt = m_pBuddy->GetCursorPos ();
         }
       nNumReplaced++;
-
-      // calculate the end of the current replacement
-      CPoint m_ptCurrentReplacedEnd;
-      m_ptCurrentReplacedEnd.y = m_ptFoundAt.y;
-      m_ptCurrentReplacedEnd.x = m_ptFoundAt.x + m_pBuddy->m_nLastReplaceLen;
 
       // find the next instance
       m_bFound = DoHighlightText ( FALSE );
